--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ bpt_unit_test
 bpt_vec_unit_test
 zbpt_unit_test
 bench_unit_test
+benchmark_test
 bpt_dump_numbers
 bpt_unit_test/*
 bpt_unit_test.dSYM
